# neovio

./: .gitignore  CHANGELOG.md  README.md  autonomous_slam.py  dataset.json  gemini.py  generate.py  global_requirements.txt  lidar_handler.py  lidar_test.py  main.py  motor_control.py  record.py  requirements.txt  setup_check.sh  slam_mapper.py  something.py  test.py  test2.py  test_slam.py  train.py  train_model.py  voice_classifier.py
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/neovio_autonomous_car/: CMakeLists.txt  package.xml
catkin_ws/src/neovio_autonomous_car/launch/: gmapping.launch  navigation.launch
catkin_ws/src/neovio_autonomous_car/scripts/: motor_control_node.py
src/neovio_autonomous_car/: CMakeLists.txt  README.md
src/neovio_autonomous_car/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml
src/neovio_autonomous_car/launch/: complete_system.launch  navigation.launch  rplidar.launch  slam.launch
src/neovio_autonomous_car/rviz/: navigation.rviz  slam.rviz
src/neovio_autonomous_car/scripts/: robot_base_controller.py  voice_command_node.py
src/rplidar_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
src/rplidar_ros/launch/: rplidar_a1.launch
src/rplidar_ros/src/: rplidar_client.cpp  rplidar_node.cpp
