<?xml version="1.0"?>
<package format="2">
  <name>rplidar_ros</name>
  <version>1.0.0</version>
  <description>Custom ROS package for RPLIDAR A1 sensor integration</description>

  <maintainer email="maintainer@neovio.com">Neovio Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
  </export>
</package>
