<?xml version="1.0"?>
<package format="2">
  <name>neovio_autonomous_car</name>
  <version>0.1.0</version>
  <description>Autonomous car with LIDAR, motor control, SLAM, and voice commands</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
</package>
